--- a/src/Components/Register.css
+++ b/src/Components/Register.css
@@ -25,8 +25,8 @@
     width: 70px;
     border-radius: 50px;
 }
-input{
-    margin-bottom: 30px;
+.register-form input{
+    margin-bottom: 10px;
     height: 20px;
     width: 250px;
     background-color: white;
@@ -48,4 +48,7 @@ input{
 a{
     color: white;
    
+}
+.register .register-form p{
+    color: white;
 }
