--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -7,7 +7,7 @@
 .text-section {
     flex: 1; 
     padding: 16px; 
-    background-color: #f4f4f4;
+   
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -42,7 +42,9 @@
     background-color:  #161D6F;
     padding: auto;
     border-radius: 20px;
+    transition: all 0.3s ease-in-out;
 }
+
 
 .slide-image {
     width: 100%;
@@ -55,7 +57,10 @@
     border: 4px solid white;
    border-radius: 20px;
 }
-
+.slide-image:hover{
+    transform: scale(1.1);
+    }
+    
 .slide-image.active {
     opacity: 1;
 }
